# etl_nano_project_v2

./: .gitignore  0_yeu_cau_khoi_tao_ban_dau.md  PROJECT_CHRONICLE.md  README.md  REPORT_CHANGES.md  agents.md  main.py  pyproject.toml
.github/workflows/: sync_to_drive.yml
config/: .env.example
docs/knowledge/: GEM_AUTO_PIPELINE.md  GEM_CODE_MAP.md  GEM_CODE_SNIPPETS.md  GEM_DATA_FLOW.md  GEM_DB_SCHEMAS.md  GEM_DEPENDENCY_GRAPH.md  GEM_ERROR_CONTEXT.md  GEM_GUIDE.md  GEM_NAVIGATION.md  GEM_SYNC_WORKFLOW.md  GEM_TECHNICAL_STANDARDS.md  loop_Gem_Github_GoogleDrive_NotebookLM.md
docs/prompts/: 20260508_1125_change_upload_from_oauth2.md  20260508_1330_change_upload_from_local_v1.md  20260508_1510_change_upload_all_from_local_v1.md  20260508_1540_change_upload_all_from_local_v2.md  20260509_1045_change_group_file_v1.md  20260511_0840_change_group_file_v2.md  20260511_1425_change_group_file_v3.md  20260511_1535_change_group_file_v4.md  20260514_1420_tao_man_hinh_dashboard_doi_chieu_v1.md  20260515_0835_tao_man_hinh_dashboard_doi_chieu_v2.md  20260515_1315_tao_man_hinh_dashboard_doi_chieu_v3.md  20260515_1340_tao_man_hinh_dashboard_doi_chieu_v4.md  20260515_1610_bo_sung_bang_doi_chieu_v1.md  20260516_0830_cap_nhat_project_chronicle_v1.md  20260516_1105_sua_loi_dashboard_doi_chieu_v1.md  20260518_0900_xay_dung_khung_dong_bo_v1.md  20260518_1040_xay_dung_luong_full_load_v1.md  (+7 more)
scripts/: upload_to_drive.py  upload_to_drive_from_local.py
src/core/: base_loader.py  (+1 more)
temp_merged/: MASTER_CORE_LOGIC.md  MASTER_ETL_PROCESS.md  MASTER_INTERFACE.md  MASTER_KNOWLEDGE_BASE.md
(+44 files in other folders)
