[project]
name = "etl-nano-project-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "nicegui>=3.12.0",
    "pathspec>=1.1.1",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
]
